# grid

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: grid_scene.cc.B8103F27CA16DBF1.idx  grid_scene.h.18196B2AB340B11C.idx  main.cc.1839E2EAB56470F4.idx  mlp_window.cc.EC55BD8F9B57F547.idx  mlp_window.h.649E5ED6771FF47F.idx
src/: cached_training
src/app/: CMakeLists.txt  grid_scene.cc  grid_scene.h  main.cc  mlp_window.cc  mlp_window.h
src/loader/: CMakeLists.txt  loader.cc  loader.h  test_loader.cc
src/network/: CMakeLists.txt  network.cc  network.h  network_mgr.cc  network_mgr.h  test_network.cc
